lexer_parser/src/test/exempleFile/miniJaja/success/oneFunctionIntWithCall.mjj
class A {
    int f(){
        
    };

    main{
        f();
    }
}