lexer_parser/src/test/exempleFile/miniJaja/fail/missColodon.mjj
class missColodon {
    int x = 0;
    int y = 34

    main(){
        
    }
}